--- a/portfolio.html
+++ b/portfolio.html
@@ -34,73 +34,73 @@
     </header>
 <main>
 <!-- Фильтр -->
-<ul class="list">
-    <button type="button">Все</button>
-    <button type="button">Веб сайты</button>
-    <button type="button">Приложения</button>
-    <button type="button">Дизайн</button>
-    <button type="button">Маркетинг</button>
+<ul class="site-nav list">
+    <button type="button" class="current button-primery">Все</button>
+    <button type="button" class="button">Веб сайты</button>
+    <button type="button" class="button">Приложения</button>
+    <button type="button" class="button">Дизайн</button>
+    <button type="button" class="button">Маркетинг</button>
 </ul>
 <!--Набор карочек-->
 <ul class="site-nav list">
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img11.jpg" alt="" width="370">
             <h2 class="card-title">Технокряк</h2>
             <p class="card-text">Вебсайт</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-222.jpg" alt="" width="370">
             <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
             <p class="card-text">Дизайн</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-333.jpg" alt="" width="370">
             <h2 class="card-title">Ресторан Seafood</h2>
             <p class="card-text">Приложение</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-4.jpg" alt="" width="370">
             <h2 class="card-title">Проект Prime</h2>
             <p class="card-text">Маркетинг</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-5.jpg" alt="" width="370">
             <h2 class="card-title">Проект Boxes</h2>
             <p class="card-text">Приложение</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-6.jpg" alt="" width="370">
             <h2 class="card-title">Inspiration has no Borders</h2>
             <p class="card-text">Веб-сайт</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-7.jpg" alt="" width="370">
             <h2 class="card-title">Издания Limited Edition</h2>
             <p class="card-text">Дизайн</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-8.jpg" alt="" width="370">
             <h2 class="card-title">Проект LAB</h2>
             <p class="card-text">Маркетинг</p>
         </a>
     </li>
     <li>
-        <a href="">
+        <a class="title" href="">
             <img src="./images/img-9.jpg" alt="" width="370">
             <h2 class="card-title">Growing Business</h2>
             <p class="card-text">Приложение</p>
