--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--Hero-->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <a class="hero-link button" href="#">Заказать услугу</a>
+            <a class="hero-link button-hero" href="#">Заказать услугу</a>
         </section>
         <!--Наши преимущества-->
         <section class="section">
