--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
         <a class="title" href="">
             <img src="./images/img11.jpg" alt="" width="370">
             <h2 class="card-title">Технокряк</h2>
-            <p class="card-text">Вебсайт</p>
+            <p class="card-text">Веб-сайт</p>
         </a>
     </li>
     <li>
